# Le-hse-secdev-course-project-2025

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  app.db  compose.yaml  pyproject.toml  requirements.txt  seccomp-profile.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: main.py
docs/: REVIEW_CHECKLIST.md
docs/adr/: ADR-001-rfc7807-errors.md  ADR-002-auth-jwt.md  ADR-003-secrets-and-config.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
src/studynotes/: database.py  errors.py  main.py  models.py  schemas.py  security.py
tests/: test_errors.py  test_health.py  test_notes.py  test_secure_coding.py  test_security_argon2.py  test_security_extra.py
